# Event-Agent-Langraph

./: .gitignore  README.md  main.py  pyproject.toml  server.py
event_rag_agent/: __init__.py  config.py  data.py  main.py  user_preferences.json
faiss_event_index/: index.faiss  index.pkl
static/: index.html
